########### 2015-9-18 #################
alter table shop_items_product add column sale_product bigint(20) NOT NULL DEFAULT 0;
CREATE INDEX `shop_items_product_bdef1e5a` ON `shop_items_product` (`sale_product`);
########### 2015-9-17 #################
alter table shop_items_contrastcontent add column status varchar(32) default 'normal';
alter table shop_items_contrastcontent add column sid int(11) default 0;
########### 2015-9-6 #################
alter table flashsale_productdetail modify column note varchar(256);
########### 2015-8-26 #################
alter table flashsale_order add discount_fee double NOT NULL;
########### 2015-8-26 #################
CREATE INDEX `shop_items_product_52094d6e` ON `shop_items_product` (`name`);
CREATE INDEX `shop_items_product_aff30766` ON `shop_items_product` (`model_id`);
CREATE INDEX `flashsale_productdetail_44e36594` ON `flashsale_productdetail` (`is_recommend`);
CREATE INDEX `flashsale_productdetail_28ffeec5` ON `flashsale_productdetail` (`is_seckill`);
CREATE INDEX `flashsale_productdetail_dfd6476a` ON `flashsale_productdetail` (`buy_limit`);
CREATE INDEX `suplychain_flashsale_orderdetail_bb420c12` ON `suplychain_flashsale_orderdetail` (`product_id`,`chichu_id`);
########### 2015-8-24 #################
alter table flashsale_productdetail add column material varchar(64) null;
alter table flashsale_productdetail add column color varchar(64) null;
alter table flashsale_productdetail add column wash_instructions varchar(128) null;
alter table flashsale_productdetail add column note varchar(64) null;
########### 2015-8-22 #################
alter table shop_items_product add ware_by int(11) NOT NULL;
alter table shop_items_product add index SH_IT_PR_SF_SU_ST_WB_IDX(sale_time,shelf_status,ware_by);
########### 2015-8-15 #################
ALTER TABLE flashsale_tongji_shopping ADD rebetamount INT(11) DEFAULT 0; 
########### 2015-8-13 #################
alter table flashsale_shoppingcart add column remain_time datetime DEFAULT NULL;