@@ -273,6 +273,55 @@ def daily_data_stats():
                 temp.save()
 
 
+from shopback.refunds.models import RefundProduct, Refund
+from django.db.models import Sum, F
+from shopback.trades.models import MergeTrade, MergeOrder
+
+
+def get_daily_refund_num(pre_day=None):
+    if pre_day is None:
+        return
+    today = datetime.date.today()
+    target_day = today - datetime.timedelta(days=pre_day)
+    start_dt = datetime.datetime(target_day.year, target_day.month, target_day.day)
+    end_dt = datetime.datetime(target_day.year, target_day.month, target_day.day, 23, 59, 59)
+    ref_pros = RefundProduct.objects.filter(created__gte=start_dt, created__lte=end_dt)
+    # SupplyChainStatsOrder 记录创建
+    for pro in ref_pros:    # 退货数量计算
+        products = Product.objects.filter(outer_id=pro.outer_id)
+        if products.exists() and products[0].sale_time:
+            scso, state = SupplyChainStatsOrder.objects.get_or_create(product_id=pro.outer_id,
+                                                                      outer_sku_id=pro.outer_sku_id,
+                                                                      shelve_time=products[0].sale_time,
+                                                                      sale_time=target_day)
+            # 过滤出　对应产品的退货集合
+            ref = ref_pros.filter(outer_id=pro.outer_id, outer_sku_id=pro.outer_sku_id)
+            # 计算同款集合中的　数量和
+            refund_num = ref.aggregate(total_num=Sum('num')).get('total_num') or 0
+            scso.refund_num = refund_num  # 保存退货数量
+            scso.save()
+            # 过滤订单中一款产品的集合 付款时间是昨天的
+    from shopback import paramconfig as pcfg
+    # 付款时间是昨天　是退款状态的订单　
+    refunds = Refund.objects.filter(modified__gte=start_dt, modified__lte=end_dt,
+                                    status__in=(pcfg.REFUND_SUCCESS,  # 退款成功
+                                                pcfg.REFUND_CONFIRM_GOODS,  # 买家已经退货
+                                                pcfg.REFUND_WAIT_SELLER_AGREE))  # 卖家同意退款
+    for refund in refunds:
+        try:
+            mo = MergeOrder.objects.get(oid=refund.oid)
+            products = Product.objects.filter(outer_id=mo.outer_id)
+            if products.exists() and products[0].sale_time:
+                scso, state = SupplyChainStatsOrder.objects.get_or_create(product_id=mo.outer_id,
+                                                                          outer_sku_id=mo.outer_sku_id,
+                                                                          shelve_time=products[0].sale_time,
+                                                                          sale_time=target_day)
+                scso.refund_amount_num = F("refund_amount_num") + 1
+                scso.save()
+        except MergeOrder.DoesNotExist:
+            return
+
+
 from django.db import connection
 
 
