@@ -37,6 +37,8 @@ class SupplyChainStatsOrder(models.Model):
     order_deal_time = models.BigIntegerField(default=0, verbose_name=u'订货时间')
     goods_arrival_time = models.BigIntegerField(default=0, verbose_name=u'到货时间')
     goods_out_time = models.BigIntegerField(default=0, verbose_name=u'到货发出时间')
+    refund_amount_num = models.IntegerField(default=0, verbose_name=u"退款数量")
+    refund_num = models.IntegerField(default=0, verbose_name=u"退货数量")
     created = models.DateTimeField(auto_now_add=True, verbose_name=u'创建日期')
     updated = models.DateTimeField(auto_now=True, verbose_name=u'更新日期')
 
